Fix some minor warnings.